--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,14 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/bootstrap and jquery/jquery-1.11.0.min.js",
+              "src/assets/bootstrap and jquery/bootstrap.min.js"
+
+            ]
           },
           "configurations": {
             "production": {
